# sight_words

./: .gitignore  app.py  pyproject.toml
data/: sight_words.csv
sight_words/: division_estimation.py  math_drills.py  sight_words.py
tests/: test_sight_words.py
