[tool.poetry]
name = "sight_words"
version = "0.2.0"
description = ""
authors = ["bpdonehoo <bpdonehoo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
notebook = "^6.4.0"
streamlit = "^0.88.0"
boto3 = "^1.18.32"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b2"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"